new version: add new language: C++11

--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
 				<fieldset id="quickSubmitForm"  style="float:left">
 					<legend>Quick Submit / Search Problem</legend>
 					<form id="submitForm" action="http://uva.onlinejudge.org/index.php?option=com_onlinejudge&amp;Itemid=25&amp;page=save_submission" method="post" enctype="multipart/form-data" target="_blank">
-						<table width="360px">
+						<table width="420px">
 							<tr>
 								<th width="75%"></th>
 								<th width=""></th>
@@ -29,11 +29,12 @@
 									<input type="radio" name="language" value="2" /> JAVA
 									<input type="radio" name="language" value="3" checked="true" /> C++
 									<input type="radio" name="language" value="4" /> PASCAL
+                                    <input type="radio" name="language" value="5" /> C++11
 								</td>
 							</tr>
 							<tr>
 								<td>
-									<textarea name="code" rows="3" cols='32' placeholder="Paste your code here..."></textarea>
+									<textarea name="code" rows="3" cols='38' placeholder="Paste your code here..."></textarea>
 								</td>
 								<td align='center'>
 									<input type="submit" value="Submit"/>
