add uDebug link

--- a/popup.html
+++ b/popup.html
@@ -131,10 +131,11 @@
 			<hr />
 			[<a href="http://uva.onlinejudge.org/" target="_blank">UVa</a>] 
 				[<a href="http://online-judge.uva.es/board/" target="_blank">4rum</a>] 
-				[<a href="http://uhunt.felix-halim.net/" target="_blank">uHunt</a>] 
+				[<a href="http://uhunt.felix-halim.net/" target="_blank">uHunt</a>]
+                [<a href="http://www.udebug.com/" target="_blank">uDebug</a>]
 				[<a href="http://uvatoolkit.com/" target="_blank">Toolkit</a>] 
 				[<a href="http://umt.boocode.com/" target="_blank">UMT</a>] 
-			<span style="float:right">UVa Quick Access Tool 1.1.1 / Copyright &copy; 2013 - <a href="http://lamphanviet.com/" target="_blank">lamphanviet</a></span>
+			<span style="float:right">UVa Quick Access Tool 1.1.2 / Copyright &copy; 2013 - <a href="http://lamphanviet.com/" target="_blank">lamphanviet</a></span>
 		</div><!--end footer-->
 		<script type="text/javascript" src="popup.js"></script>
 	</body>
